[package]
name = "actix-broker-research"
version = "0.1.0"
authors = ["Adam Tulejko <adaqus@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.9.0"
actix-broker = "0.3.0"
actix-rt = "1.0.0"
anymap = "0.12.1"
parking_lot = "0.10.0"

[dev-dependencies]
test-case = "1.0.0"
